# agent-ops

./: .gitignore  CONTINUE.md  LICENSE  README.md  TODO.md  agent-ops.yaml  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN.md  LIGHTCHAIN.md  MVP1-COMPARISON.md  MVP1-PROTOTYPES.md  MVP1-TOKEN-COMPARISON.md  MVP2-0.md  TODO.md
src/agent_ops/: __init__.py  board.py  cli.py  config.py  core.py  design.py  providers.py  qa.py  types.py
tests/: test_board.py  test_core.py
